# geco3

./: .gitignore  README.md  __init__.py  basefunctions.py  contdepfunct.py  example-data-english.csv  generate-data-english.py  generate-data-japanese.py  generator.py  pyproject.toml  setup.py
Python3_GeCo_data_generator_coruptor/: attrgenfunct.py  corruptor.py
Python3_GeCo_data_generator_corurptor.egg-info/: PKG-INFO  SOURCES.txt
geco3/: __init__.py  attrgenfunct.py  corruptor.py  generator.py
lookup-files/: surname-misspell-japanese.csv  surname-misspell.csv
tests/: attrgenfunctTest.py  basefunctionsTest.py  contdepfunctTest.py  corruptorTest.py  generatorTest.py  mainTest.py
tests/logs/: attrgenfunctTest-20240817-1637.csv  attrgenfunctTest-20240817-1639.csv  attrgenfunctTest-20240817-1641.csv  attrgenfunctTest-20240817-1642.csv  attrgenfunctTest-20240818-1518.csv  attrgenfunctTest-20240818-1624.csv  basefunctionsTest-20240817-1645.csv  basefunctionsTest-20240818-1519.csv  basefunctionsTest-20240818-1600.csv  basefunctionsTest-20240818-1624.csv  basefunctionsTest-20240818-1625.csv  contdepfunctTest-20240817-1647.csv  contdepfunctTest-20240818-1625.csv  corruptorTest-20240818-1502.csv  corruptorTest-20240818-1625.csv  generatorTest-20240818-1639.csv  generatorTest-20240818-1640.csv  mainTest-20240818-1544.txt  mainTest-20240818-1549.txt  mainTest-20240818-1640.txt
